--- a/files/spacedRepetition.org
+++ b/files/spacedRepetition.org
@@ -6,18 +6,17 @@
 ** Vocabulary
 
 *** Adjective :drill:
-    SCHEDULED: <2018-09-27 Thu>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       c4e8999f-cd7b-49ac-932e-dc8aa1676fa5
-  :DRILL_LAST_INTERVAL: 4.2751
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 10
-  :DRILL_FAILURE_COUNT: 7
-  :DRILL_AVERAGE_QUALITY: 1.9
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 12
+  :DRILL_FAILURE_COUNT: 9
+  :DRILL_AVERAGE_QUALITY: 1.75
   :DRILL_EASE: 2.22
-  :DRILL_LAST_QUALITY: 4
-  :DRILL_LAST_REVIEWED: [2018-09-23 Sun 13:58]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:37]
   :END:
 Define this word
 **** English
@@ -29,18 +28,17 @@ Mark was apoplectic with rage at the decision
 
 
 *** Adjective :drill:
-    SCHEDULED: <2018-09-27 Thu>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       e52dcdd5-23f4-4c37-8d36-9b9b3e47ad62
-  :DRILL_LAST_INTERVAL: 3.8295
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 0
-  :DRILL_AVERAGE_QUALITY: 3.0
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 3
+  :DRILL_FAILURE_COUNT: 2
+  :DRILL_AVERAGE_QUALITY: 1.333
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-09-23 Sun 14:14]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
   :END:
 Define the phrase
 **** English
@@ -51,18 +49,17 @@ Latin phrase "of its own kind; in a class by itself; unique"
 the sui generis nature of animals
 
 *** Noun                                                              :drill:
-    SCHEDULED: <2018-09-27 Thu>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       e4f76d52-7774-4136-ac32-a62fb3afac17
-  :DRILL_LAST_INTERVAL: 3.8544
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 0
-  :DRILL_AVERAGE_QUALITY: 4.0
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_FAILURE_COUNT: 3
+  :DRILL_AVERAGE_QUALITY: 1.5
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 4
-  :DRILL_LAST_REVIEWED: [2018-09-23 Sun 15:11]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
   :END:
 Define the word
 **** English
@@ -74,18 +71,18 @@ Cutting-edge young people were calling themselves neo-liberal, adopting a term
 that had been anathema only a few years earlier.
 
 *** Adjective :drill:
-    SCHEDULED: <2018-09-30 Sun>
+    SCHEDULED: <2018-10-05 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       df98658b-d200-455f-85ea-58e8e90a6196
-  :DRILL_LAST_INTERVAL: 4.7015
+  :DRILL_LAST_INTERVAL: 3.8779
   :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 0
-  :DRILL_AVERAGE_QUALITY: 4.0
-  :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 4
-  :DRILL_LAST_REVIEWED: [2018-09-25 Tue 13:13]
+  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_FAILURE_COUNT: 2
+  :DRILL_AVERAGE_QUALITY: 2.75
+  :DRILL_EASE: 2.6
+  :DRILL_LAST_QUALITY: 5
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:30]
   :END:
 Define the word
 **** English
@@ -97,18 +94,17 @@ As a result of having studied abroad several years, Helen has become quite
 erudite on the subject of art history.
 
 *** Noun                                                        :drill:
-    SCHEDULED: <2018-09-29 Sat>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       fecbd2de-fd88-43ca-81fc-8a302b234284
-  :DRILL_LAST_INTERVAL: 4.2145
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 0
-  :DRILL_AVERAGE_QUALITY: 4.0
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_FAILURE_COUNT: 3
+  :DRILL_AVERAGE_QUALITY: 1.75
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 4
-  :DRILL_LAST_REVIEWED: [2018-09-25 Tue 13:31]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:37]
   :END:
 Define the word
 **** English
@@ -135,18 +131,18 @@ The us of words to express something other than and especially the opposite of
 the literal meaning
 
 *** Adjective :drill:
-    SCHEDULED: <2018-09-29 Sat>
+    SCHEDULED: <2018-10-05 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       4a82cb00-118c-4a69-87f3-70e5837b7697
-  :DRILL_LAST_INTERVAL: 3.9199
+  :DRILL_LAST_INTERVAL: 3.5112
   :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 2
-  :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 2.5
+  :DRILL_TOTAL_REPEATS: 5
+  :DRILL_FAILURE_COUNT: 3
+  :DRILL_AVERAGE_QUALITY: 2.6
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-09-25 Tue 13:34]
+  :DRILL_LAST_QUALITY: 4
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:37]
   :END:
 Define the word
 **** English
@@ -157,18 +153,17 @@ of, relation to, or produced by lymph
 lacking physical or mental energy; sluggish
 
 *** Adjective                                                         :drill:
-    SCHEDULED: <2018-09-29 Sat>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       ae472f6f-1fb1-4149-8963-edcfb690a34b
-  :DRILL_LAST_INTERVAL: 3.8075
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 0
-  :DRILL_AVERAGE_QUALITY: 3.0
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 5
+  :DRILL_FAILURE_COUNT: 4
+  :DRILL_AVERAGE_QUALITY: 1.4
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-09-25 Tue 13:32]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
   :END:
 Define the word
 **** English
@@ -181,9 +176,18 @@ lacking in qualities that interest, stimulate, or challenge; dull, flat
 The soup was rather insipid
 
 *** Adjective                                                         :drill:
+    SCHEDULED: <2018-10-05 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       80e1435a-f047-4c85-b4c8-0553b9de165c
+  :DRILL_LAST_INTERVAL: 3.7081
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 1
+  :DRILL_AVERAGE_QUALITY: 2.5
+  :DRILL_EASE: 2.36
+  :DRILL_LAST_QUALITY: 3
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
   :END:
 Define the word
 **** English
@@ -198,6 +202,113 @@ a distinctive quality
 Without her love, life has lost its savor for me.
 
 
+*** Adjective, Noun, Verb :drill:
+    SCHEDULED: <2018-10-05 Fri>
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: twosided
+  :ID:       448993f4-e5af-4d00-a36c-7a4c52aa00f3
+  :DRILL_LAST_INTERVAL: 4.2065
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 1
+  :DRILL_FAILURE_COUNT: 0
+  :DRILL_AVERAGE_QUALITY: 5.0
+  :DRILL_EASE: 2.6
+  :DRILL_LAST_QUALITY: 5
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:29]
+  :END:
+Define the word
+**** English
+sunken place
+**** Definition
+The antithesis of being woke.
+A place of slumber recarding systematic and idiosyncratic injuct and oppression
+in regards to race.
+**** Example sentence
+Kanye has been in a sunken place
+
+*** Adjective, Noun, Verb :drill:
+    SCHEDULED: <2018-10-06 Sat>
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: twosided
+  :ID:       bf6b6df7-fe1a-4379-851d-e6d61c9542a7
+  :DRILL_LAST_INTERVAL: 4.8265
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 1
+  :DRILL_FAILURE_COUNT: 0
+  :DRILL_AVERAGE_QUALITY: 4.0
+  :DRILL_EASE: 2.5
+  :DRILL_LAST_QUALITY: 4
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:29]
+  :END:
+Define the word
+**** English
+temp check
+**** Definition
+When someone who has no intention of following up with a conversation sends a
+short message, to see if you will reply
+**** Example sentence
+
+*** Fact
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: hide1cloze
+  :END:
+[Hermeneutics] is the theory and methodology of [interpretation].
+It include both verbal and non-verbal communication, semiotics, presuppositions,
+and preunderstandings.
+
+
+*** Noun                                                              :drill:
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: twosided
+  :ID:       4f31c516-439a-46df-9737-6ff82947c4d5
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_FAILURE_COUNT: 4
+  :DRILL_AVERAGE_QUALITY: 1.25
+  :DRILL_EASE: 2.5
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
+  :END:
+Define the word
+**** English
+semiotics
+**** Definition
+The study of signs and symbols and their use or interpretation
+
+*** Fact :drill:
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: hide1cloze
+  :ID:       55faead9-1faf-45df-9400-719b832bcc0e
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 1
+  :DRILL_FAILURE_COUNT: 1
+  :DRILL_AVERAGE_QUALITY: 1.0
+  :DRILL_EASE: 2.5
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
+  :END:
+[Epistemology] is the branch of philosophy concerned with the theory of
+[knowledge].
+
+*** Fact :drill:
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: hide1cloze
+  :ID:       fd88df70-8678-424c-a897-42b347a0002c
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 1
+  :DRILL_FAILURE_COUNT: 1
+  :DRILL_AVERAGE_QUALITY: 2.0
+  :DRILL_EASE: 2.5
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
+  :END:
+[Ontology] is the philosophical study of [being. It studies concepts that
+directly relate to being, in particular becoming, existence, reality.]
+
+
 # *** Adjective, Noun, Verb :drill:
 #   :PROPERTIES:
 #   :DRILL_CARD_TYPE: twosided
@@ -206,3 +317,9 @@ Without her love, life has lost its savor for me.
 # **** English
 # **** Definition
 # **** Example sentence
+
+# *** Fact
+#   :PROPERTIES:
+#   :DRILL_CARD_TYPE: hide1cloze, show1cloze
+#   :END:
+# Something [like] this
