--- a/files/spacedRepetition.org
+++ b/files/spacedRepetition.org
@@ -6,17 +6,18 @@
 ** Vocabulary
 
 *** Adjective :drill:
+    SCHEDULED: <2018-10-05 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       c4e8999f-cd7b-49ac-932e-dc8aa1676fa5
-  :DRILL_LAST_INTERVAL: 0.0
-  :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 12
-  :DRILL_FAILURE_COUNT: 9
-  :DRILL_AVERAGE_QUALITY: 1.75
-  :DRILL_EASE: 2.22
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:37]
+  :DRILL_LAST_INTERVAL: 3.6908
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 14
+  :DRILL_FAILURE_COUNT: 10
+  :DRILL_AVERAGE_QUALITY: 1.785
+  :DRILL_EASE: 2.08
+  :DRILL_LAST_QUALITY: 3
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 16:22]
   :END:
 Define this word
 **** English
@@ -28,17 +29,18 @@ Mark was apoplectic with rage at the decision
 
 
 *** Adjective :drill:
+    SCHEDULED: <2018-10-05 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       e52dcdd5-23f4-4c37-8d36-9b9b3e47ad62
-  :DRILL_LAST_INTERVAL: 0.0
-  :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 3
-  :DRILL_FAILURE_COUNT: 2
-  :DRILL_AVERAGE_QUALITY: 1.333
-  :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
+  :DRILL_LAST_INTERVAL: 4.2839
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 6
+  :DRILL_FAILURE_COUNT: 4
+  :DRILL_AVERAGE_QUALITY: 1.667
+  :DRILL_EASE: 2.22
+  :DRILL_LAST_QUALITY: 3
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 16:23]
   :END:
 Define the phrase
 **** English
@@ -54,12 +56,12 @@ the sui generis nature of animals
   :ID:       e4f76d52-7774-4136-ac32-a62fb3afac17
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 4
-  :DRILL_FAILURE_COUNT: 3
-  :DRILL_AVERAGE_QUALITY: 1.5
+  :DRILL_TOTAL_REPEATS: 7
+  :DRILL_FAILURE_COUNT: 6
+  :DRILL_AVERAGE_QUALITY: 1.285
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 16:23]
   :END:
 Define the word
 **** English
@@ -94,17 +96,18 @@ As a result of having studied abroad several years, Helen has become quite
 erudite on the subject of art history.
 
 *** Noun                                                        :drill:
+    SCHEDULED: <2018-10-05 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       fecbd2de-fd88-43ca-81fc-8a302b234284
-  :DRILL_LAST_INTERVAL: 0.0
-  :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_LAST_INTERVAL: 4.4886
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 5
   :DRILL_FAILURE_COUNT: 3
-  :DRILL_AVERAGE_QUALITY: 1.75
+  :DRILL_AVERAGE_QUALITY: 2.2
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:37]
+  :DRILL_LAST_QUALITY: 4
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 16:21]
   :END:
 Define the word
 **** English
@@ -158,12 +161,12 @@ lacking physical or mental energy; sluggish
   :ID:       ae472f6f-1fb1-4149-8963-edcfb690a34b
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 5
-  :DRILL_FAILURE_COUNT: 4
-  :DRILL_AVERAGE_QUALITY: 1.4
+  :DRILL_TOTAL_REPEATS: 7
+  :DRILL_FAILURE_COUNT: 6
+  :DRILL_AVERAGE_QUALITY: 1.285
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 16:23]
   :END:
 Define the word
 **** English
@@ -263,12 +266,12 @@ and preunderstandings.
   :ID:       4f31c516-439a-46df-9737-6ff82947c4d5
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 4
-  :DRILL_FAILURE_COUNT: 4
-  :DRILL_AVERAGE_QUALITY: 1.25
+  :DRILL_TOTAL_REPEATS: 8
+  :DRILL_FAILURE_COUNT: 8
+  :DRILL_AVERAGE_QUALITY: 1.249
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 16:23]
   :END:
 Define the word
 **** English
@@ -277,33 +280,35 @@ semiotics
 The study of signs and symbols and their use or interpretation
 
 *** Fact :drill:
+    SCHEDULED: <2018-10-05 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: hide1cloze
   :ID:       55faead9-1faf-45df-9400-719b832bcc0e
-  :DRILL_LAST_INTERVAL: 0.0
-  :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
+  :DRILL_LAST_INTERVAL: 3.6445
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 2
   :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 1.0
+  :DRILL_AVERAGE_QUALITY: 2.5
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
+  :DRILL_LAST_QUALITY: 4
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 16:22]
   :END:
 [Epistemology] is the branch of philosophy concerned with the theory of
 [knowledge].
 
 *** Fact :drill:
+    SCHEDULED: <2018-10-05 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: hide1cloze
   :ID:       fd88df70-8678-424c-a897-42b347a0002c
-  :DRILL_LAST_INTERVAL: 0.0
-  :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 2.0
+  :DRILL_LAST_INTERVAL: 4.0504
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 3
+  :DRILL_FAILURE_COUNT: 2
+  :DRILL_AVERAGE_QUALITY: 2.333
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 10:38]
+  :DRILL_LAST_QUALITY: 4
+  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 16:22]
   :END:
 [Ontology] is the philosophical study of [being. It studies concepts that
 directly relate to being, in particular becoming, existence, reality.]
