--- a/files/spacedRepetition.org
+++ b/files/spacedRepetition.org
@@ -266,12 +266,12 @@ and preunderstandings.
   :ID:       4f31c516-439a-46df-9737-6ff82947c4d5
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 8
-  :DRILL_FAILURE_COUNT: 8
-  :DRILL_AVERAGE_QUALITY: 1.249
+  :DRILL_TOTAL_REPEATS: 9
+  :DRILL_FAILURE_COUNT: 9
+  :DRILL_AVERAGE_QUALITY: 1.221
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-01 Mon 16:23]
+  :DRILL_LAST_REVIEWED: [2018-10-03 Wed 12:24]
   :END:
 Define the word
 **** English
@@ -312,6 +312,18 @@ The study of signs and symbols and their use or interpretation
   :END:
 [Ontology] is the philosophical study of [being. It studies concepts that
 directly relate to being, in particular becoming, existence, reality.]
+
+*** Noun                                                        :drill:
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: twosided
+  :ID:       2f0293bf-b1e9-4e87-9c1a-818e5e9cbdab
+  :END:
+Define the word
+**** English
+precocity
+**** Definition
+intelligence achieved far ahead of normal development schedules
+**** Example sentence
 
 
 # *** Adjective, Noun, Verb :drill:
